[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leadminer"
version = "0.1.0"
description = "CLI tool for finding local business leads"
dependencies = [
    "requests",
    "python-dotenv",
    "rich",
    "typer"
]

[project.scripts]
leadminer = "main:app"

[tool.setuptools]
py-modules = [
    "main",
    "search",
    "output",
    "setup_cmd",
    "help",
    "campaigns",
    "database",
    "classes",
]
